--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -31,9 +31,8 @@
 
             <ImageView
                 android:id="@+id/user_avatar"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="82dp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 app:avatar="@{user.avatarUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
