--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="user_item_horizontal_margin">16dp</dimen>
     <dimen name="user_item_vertical_margin">@dimen/user_item_padding</dimen>
     <dimen name="user_item_corner_radius">4dp</dimen>
+    <dimen name="icon_size">100dp</dimen>
 </resources>
