--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,7 +50,7 @@
                         android:id="@+id/users_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:items="@{viewmodel.items}"
+                        app:items="@{viewmodel.pagedItems}"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
                 </LinearLayout>
@@ -61,6 +61,7 @@
                     android:layout_centerInParent="true"
                     android:orientation="vertical"
                     android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">
+
 
                     <ImageView
                         android:layout_width="@dimen/icon_size"
