--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
         android:layout_marginVertical="@dimen/user_item_vertical_margin"
+        android:onClick="@{()-> viewmodel.openUser(user.id)}"
         app:cardCornerRadius="@dimen/user_item_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
