--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,16 +10,125 @@
             type="com.reportedsocks.demoproject.ui.details.UserDetailsViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.details.UserDetailsFragment">
-
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/user_details_avatar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="@dimen/avatar_size"
+            tools:src="@drawable/ic_baseline_account_box_24"
+            android:contentDescription="@string/avatar_content_description"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    </FrameLayout>
+        <TextView
+            android:id="@+id/user_details_login_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:text="@string/user_details_login_string"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@id/user_details_avatar"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            tools:text="reportedsocks"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/user_details_login_label"
+            app:layout_constraintTop_toTopOf="@id/user_details_login_label"
+            app:layout_constraintBottom_toBottomOf="@id/user_details_login_label"/>
+
+        <TextView
+            android:id="@+id/user_details_id_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:text="@string/user_details_id_string"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@id/user_details_login_label"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            tools:text="1234"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/user_details_id_label"
+            app:layout_constraintTop_toTopOf="@id/user_details_id_label"
+            app:layout_constraintBottom_toBottomOf="@id/user_details_id_label"/>
+
+        <TextView
+            android:id="@+id/user_details_type_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:text="@string/user_details_type_string"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@id/user_details_id_label"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            tools:text="user"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/user_details_type_label"
+            app:layout_constraintTop_toTopOf="@id/user_details_type_label"
+            app:layout_constraintBottom_toBottomOf="@id/user_details_type_label"/>
+
+        <TextView
+            android:id="@+id/user_details_admin_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:text="@string/user_details_admin_string"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@id/user_details_type_label"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            tools:text="false"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/user_details_admin_label"
+            app:layout_constraintTop_toTopOf="@id/user_details_admin_label"
+            app:layout_constraintBottom_toBottomOf="@id/user_details_admin_label"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/user_item_horizontal_margin"
+            android:text="@string/user_details_coming_soon"
+            style="@style/TextAppearance.AppCompat.Title"
+            app:layout_constraintBottom_toTopOf="@id/user_details_web_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_details_admin_label" />
+        <Button
+            android:id="@+id/user_details_web_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@string/user_details_button_string"
+            android:textColor="@color/colorAccent"
+            android:background="@drawable/button_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
