--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewmodel"
             type="com.reportedsocks.demoproject.ui.details.UserDetailsViewModel" />
@@ -13,122 +12,132 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/user_details_avatar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/avatar_size"
-            tools:src="@drawable/ic_baseline_account_box_24"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
             android:contentDescription="@string/avatar_content_description"
-            app:layout_constraintTop_toTopOf="parent"
+            app:avatar="@{viewmodel.userItem.avatarUrl}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_baseline_account_box_24" />
 
         <TextView
             android:id="@+id/user_details_login_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/user_details_login_string"
-            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
-            android:layout_marginVertical="@dimen/user_item_vertical_margin"
-            app:layout_constraintTop_toBottomOf="@id/user_details_avatar"
-            app:layout_constraintStart_toStartOf="parent" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Medium"
-            tools:text="reportedsocks"
             android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
             android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@string/user_details_login_string"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_details_avatar" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@{viewmodel.userItem.login}"
+            app:layout_constraintBaseline_toBaselineOf="@id/user_details_login_label"
             app:layout_constraintStart_toEndOf="@id/user_details_login_label"
-            app:layout_constraintTop_toTopOf="@id/user_details_login_label"
-            app:layout_constraintBottom_toBottomOf="@id/user_details_login_label"/>
+            tools:text="reportedsocks" />
 
         <TextView
             android:id="@+id/user_details_id_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/user_details_id_string"
-            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
-            android:layout_marginVertical="@dimen/user_item_vertical_margin"
-            app:layout_constraintTop_toBottomOf="@id/user_details_login_label"
-            app:layout_constraintStart_toStartOf="parent" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Medium"
-            tools:text="1234"
             android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
             android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@string/user_details_id_string"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_details_login_label" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@{@string/user_id_no_label(viewmodel.userItem.id)}"
+            app:layout_constraintBaseline_toBaselineOf="@id/user_details_id_label"
             app:layout_constraintStart_toEndOf="@id/user_details_id_label"
-            app:layout_constraintTop_toTopOf="@id/user_details_id_label"
-            app:layout_constraintBottom_toBottomOf="@id/user_details_id_label"/>
+            tools:text="1234" />
 
         <TextView
             android:id="@+id/user_details_type_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/user_details_type_string"
-            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
-            android:layout_marginVertical="@dimen/user_item_vertical_margin"
-            app:layout_constraintTop_toBottomOf="@id/user_details_id_label"
-            app:layout_constraintStart_toStartOf="parent" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Medium"
-            tools:text="user"
             android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
             android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@string/user_details_type_string"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_details_id_label" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@{viewmodel.userItem.type}"
+            app:layout_constraintBaseline_toBaselineOf="@id/user_details_type_label"
             app:layout_constraintStart_toEndOf="@id/user_details_type_label"
-            app:layout_constraintTop_toTopOf="@id/user_details_type_label"
-            app:layout_constraintBottom_toBottomOf="@id/user_details_type_label"/>
+            tools:text="user" />
 
         <TextView
             android:id="@+id/user_details_admin_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/user_details_admin_string"
-            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
-            android:layout_marginVertical="@dimen/user_item_vertical_margin"
-            app:layout_constraintTop_toBottomOf="@id/user_details_type_label"
-            app:layout_constraintStart_toStartOf="parent" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Medium"
-            tools:text="false"
             android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
             android:layout_marginVertical="@dimen/user_item_vertical_margin"
-            app:layout_constraintStart_toEndOf="@id/user_details_admin_label"
-            app:layout_constraintTop_toTopOf="@id/user_details_admin_label"
-            app:layout_constraintBottom_toBottomOf="@id/user_details_admin_label"/>
+            android:text="@string/user_details_admin_string"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_details_type_label" />
 
         <TextView
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
+            android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:text="@{viewmodel.userItem.siteAdmin? @string/user_admin_true : @string/user_admin_false}"
+            app:layout_constraintBaseline_toBaselineOf="@id/user_details_admin_label"
+            app:layout_constraintStart_toEndOf="@id/user_details_admin_label"
+            tools:text="false" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/user_item_horizontal_margin"
             android:text="@string/user_details_coming_soon"
-            style="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintBottom_toTopOf="@id/user_details_web_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_details_admin_label" />
+
         <Button
             android:id="@+id/user_details_web_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/user_item_horizontal_margin"
             android:layout_marginVertical="@dimen/user_item_vertical_margin"
+            android:background="@drawable/button_background"
+            android:onClick="@{() -> viewmodel.openBrowser()}"
             android:text="@string/user_details_button_string"
             android:textColor="@color/colorAccent"
-            android:background="@drawable/button_background"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
